style.css
*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  box-sizing: inherit;
}

html {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body,
figure,
h1,
h2,
h3,
p,
ul,
li {
  margin: 0;
  padding: 0;
  font-family:'Muli',sans-serif;
}

img {
  max-width: 100%;
  height: auto;
}

body {
  font-family: 'Helvetica', Helvetica, Arial, sans-serif;
}

h1, h2, h3 {
  /*text-align: center;*/
  font-weight: 400;
}

.sectionContainer {
  max-width: 70em;
  padding: 2.5em;
  margin: 0 auto;
  text-align: center;
}

.sectionHeader {
  font-size: 2em;
  color: #5973BF;
  margin-bottom: 1em;
}

@media (min-width: 30em) {
  body {
    font-size: 1.25em;
  }
}

@media (min-width: 40em) {
  .sectionContainer {
    padding: 8em 1em;
  }
}

section:nth-child(2n) {
  background-color: #EDF3F9;
}

/* this element allows you to hide text visually, but not from a screen reader */
.accessible_elem {
  clip: rect(1px 1px 1px 1px); /* IE 6/7 */
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap; /* added line */
  width: 1px;
}

/* Nav Bar */
.navbar {
  padding: 1.5em;
  text-align: center;
  color: white;
  background-color: #1f2947;
}

.navbar__brand {
  font-size: 1.75em;
  font-family: monospace;
}

.navbar__brand {
  font-family: 'Exo',cursive;
}

.navbar__menuContainer {
  margin-left: auto;
}

.navbar__menu {
  margin-top: 1em;
  display: flex;
  list-style-type: none;
  justify-content: space-between;
}

.navbar__item {
}

.navbar__linkItem {
  padding: 1em;
  text-decoration: none;
  color: inherit;
}

.navbar__linkItem:hover {
  text-decoration: underline;
}

@media screen and (min-width: 40em) {
  .navbar {
    display: flex;
    align-items: center;
  }

  .navbar__menu {
    margin-top: 0;
  }

}

.grid {

}

.grid__header {
  font-size: 3em;
  color: #5973BF;
  margin: 10px 0 50px 0;
  width: 100%;
}

.grid__item {
  padding-bottom: 1em;
}

.media {
  height: 100%;
    display: flex;
    flex-direction: column;
}
.media__profileTitle {
    color:#5973BF;
}

.grid__iconContainer {
    margin-top: 1em;
    text-align: center;
}

.svgSocIcon {
  fill: #2E3B60;
  max-width: 2em;
  max-height: 2em;
  margin-left: 0.5em;
  transition: fill 0.4s;
}

.svgSocIcon:hover {
  fill: #5973BF;
}

@media screen and (min-width: 40em) {
  .grid {
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-left: -1em;
  }
  .grid__item {
    flex: 1 0 50%;
    padding-left: 1em;
  }
}

@media screen and (min-width: 60em) {
  .grid {
    margin-left: -3em;
  }
  .grid__item {
    flex-basis: 25%;
    padding-left: 3em;
  }
}

.media__img {
  width: 100%;
  margin-bottom: 1em;
  box-shadow: 20px 20px 0 rgba(89,115,191,0.36);
}

.media__link {
  transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}

.media__link:hover,
.media__link:focus {
  outline: none;
  transform: scale(1.1) rotate(3deg);
}

.media__img--round {
  border-radius: 50%;
  box-shadow: -6px 6px 0 rgba(89,115,191,0.36);
}

.media__header {
  font-size: 3em;
  color: #5973BF;
  margin: 20px 0 20px 0;
}

.media__caption {
  text-align: center;
  flex: 1;
}

@media screen and (min-width: 40em) {
  .media--row {
    display: flex;
    flex-direction: row;
    align-items: center;
  }
  .media__img--row {
    width: 40%;
    margin-right: 1em;
  }
  .media__caption--left {
    text-align: left;
  }
}

@media screen and (min-width: 60em) {
  .media__img--row {
    margin-right: 3em;
  }
}

.contact-form__container {
  max-width: 40em;
  margin: 0 auto;
  /*margin-top: 1em;*/
}

.contact-form__input,
.contact-form__label,
.contact-form__submit {
  font-family: inherit;
  font-size: inherit;
  color: inherit;
}

.contact-form__input,
.contact-form__label {
  display: block;
  width: 100%;
}

.contact-form__input {
  margin-top: 0.5em;
  margin-bottom: 1.5em;
  padding: 1em;
  border: 1px solid;
  border-radius: 0;
  -webkit-appearance: none; /* Removes weird inner shadow on iOS Safari */
}

.contact-form__input:focus,
.contact-form__submit:focus,
.contact-form__submit:hover {
  outline: none;
  color: white;
  background-color: #5973BF;
  border-color: #5973BF;
}

.contact-form__submit {
  display: block;
  margin: 0 auto;
  padding: 0.5em 0.75em;
  font-size: 1.25em;
  background: none;
  border: 1px solid;
  transition: all 0.2s;
}

